# test-denleda

./: README.md  docker-compose.yaml  env_sample  pyproject.toml  pytest.ini
src/: manage.py
src/apps/authors/: baker_recipes.py  models.py
src/apps/authors/api/: serializers.py  views.py
src/apps/authors/migrations/: 0001_initial.py
src/apps/base/api/: mixins.py
src/apps/books/: baker_recipes.py  models.py
src/apps/books/api/: serializers.py  views.py
src/apps/books/migrations/: 0001_initial.py
src/apps/books/tests/: test_books.py
src/testbooks/: asgi.py  settings.py  urls.py  wsgi.py
